# momukbot

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md
scripts/: install_launch_agent.sh  preflight_public.sh  setup.sh  uninstall_launch_agent.sh
src/momukbot/: __init__.py  cli.py  config.py  doctor.py  factory.py  telegram_ops.py
src/momukbot/agent/: __init__.py  base.py  codex_cli.py
src/momukbot/chat/: telegram.py
src/momukbot/core/: __init__.py  formatter.py  json_utils.py  matching.py  models.py  parser.py  prompts.py  service.py
src/momukbot/search/: base.py  hybrid.py  kakao.py  naver.py
src/momukbot/storage/: __init__.py  quota.py  sqlite.py
tests/: test_cli.py  test_codex_cli.py  test_doctor.py  test_formatter.py  test_kakao_hybrid.py  test_matching.py  test_naver_scoring.py  test_parser.py  test_quota.py  test_scripts.py  test_service.py  test_storage.py  test_telegram.py
